Closed
Bug 666132
Opened 14 years ago
Closed 14 years ago
ASSERTION: Decoded samples for Vorbis packet don't match expected
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla8
People
(Reporter: cpearce, Assigned: cajbir)
References
()
Details
(Whiteboard: [inbound])
Attachments
(2 files, 1 obsolete file)
|
18.55 KB,
video/ogg
|
Details | |
|
1.09 KB,
patch
|
cpearce
:
review+
|
Details | Diff | Splinter Review |
The code to predict the number of samples in an Ogg Vorbis packet is firing an assertion while decoding many of the Ogg files in the Pirates Love Daisies HTML5 demo. e.g.:
http://www.pirateslovedaisies.com/audio/units/U-Thug8.ogg
7672[bae9d60]: ###!!! ASSERTION: Decoded samples for Vorbis packet don't match expected!: 'mVorbisPacketSamples[aPacket] == aSamples', file c:/Users/cpearce/src/blue/objdir/conten
/media/ogg/../../../../content/media/ogg/nsOggCodecState.cpp, line 126
###!!! ASSERTION: Decoded samples for Vorbis packet don't match expected!: 'mVorbisPacketSamples[aPacket] == aSamples', file c:/Users/cpearce/src/blue/objdir/content/media/ogg/../
./../../content/media/ogg/nsOggCodecState.cpp, line 126
| Assignee | ||
Comment 1•14 years ago
|
||
I've attached a test file that also causes the assertion. The file is from the test in bug 668449 comment 6.
| Assignee | ||
Updated•14 years ago
|
Assignee: nobody → chris.double
| Assignee | ||
Comment 2•14 years ago
|
||
Account for trailing data in the last frame of vorbis file when doing debug sanity checks.
Attachment #550010 -
Flags: review?(chris)
Comment 3•14 years ago
|
||
Comment on attachment 550010 [details] [diff] [review]
Fix
>+ // Account for a partial last frame
>+ if (packet->e_o_s && packet->granulepos > mGranulepos) {
>+ samples = packet->granulepos - mGranulepos;
>+ }
Is there a particular reason you're using > instead of >=? I don't see an explicit limit in the spec on how many samples can be trimmed by a short granpos on the last page, but I know that at the start of the stream, removing _all_ the samples from the packet (to give a granpos of 0) is explicitly allowed.
| Assignee | ||
Comment 4•14 years ago
|
||
Thanks Tim, I wasn't aware of that. Changed to >= as per your suggestion in comment 3.
Attachment #550010 -
Attachment is obsolete: true
Attachment #550048 -
Flags: review?(chris)
Attachment #550010 -
Flags: review?(chris)
| Reporter | ||
Updated•14 years ago
|
Attachment #550048 -
Flags: review?(chris) → review+
| Assignee | ||
Comment 5•14 years ago
|
||
Whiteboard: [inbound]
Comment 6•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla8
You need to log in
before you can comment on or make changes to this bug.
Description
•