Bug 666132: Account for trailing data in the last frame of audio data in ogg backend debug code - r=cpearce